# Annotation-Backend

./: .env.template  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: admin_api.py  auth_api.py  server.py  user_api.py
db/: env.py
db/versions/: 50ff83e93b9e_initial_db.py  ec45d12c2902_added_new_fields_to_document_table.py
db_scripts/: create-migration.sh  upgrade-db.sh
indexer/: indexing.py
lib/: crud.py  helper.py  models.py
retriever/: retriever.py
tools/: Dockerfile  generate-jwt-secret-key.py  run-docker.sh  run-server.sh
